<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompanyUI.MainActivity">

    <TextView
        android:id="@+id/ttt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/f"
        android:textColor="#000"
        android:textSize="17sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/lin_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/eventssss"></ImageView>

            <TextView
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evee"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/reseveeee"></ImageView>

            <TextView
                android:id="@+id/reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ress"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"

        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/lin_cats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/cate"></ImageView>

            <TextView
                android:id="@+id/categoreis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cats"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/logout"></ImageView>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lotout"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>