<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/loginCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:navigationIcon="@drawable/ic_arrow_back_black">

                <ImageView
                    android:id="@+id/tick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_large"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_check_black"
                    app:tint="@color/black" />

                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/padding_large"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/black" />
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/backlo"></ImageView>

                <TextView
                    android:id="@+id/texttitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layout_margin_large"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textSize="@dimen/_20sdp" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_medium"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_extra_large"
                android:paddingTop="@dimen/padding_extra_large"
                android:paddingRight="@dimen/padding_extra_large">


                <!-- Email Label -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black"
                        android:drawablePadding="@dimen/layout_margin_moderate"
                        android:inputType="textEmailAddress"
                        android:transitionName="emailLoginTransition" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Label -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_marginBottom="@dimen/padding_medium"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black"
                        android:drawablePadding="@dimen/layout_margin_moderate"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_large"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:background="@drawable/borderbtn"
                    android:text="@string/login"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/skipTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_margin_medium"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_large"
                    android:text="@string/skip_for_now"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/sentEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin_medium"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="@dimen/fab_width"
                    android:layout_height="@dimen/layout_margin_none"
                    android:layout_weight="0.2"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_black" />

                <ImageView
                    android:layout_width="@dimen/logo_icon_width"
                    android:layout_height="@dimen/layout_margin_none"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    app:srcCompat="@drawable/ic_mail_outline_black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_margin_none"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/email_sent_alert"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mailSentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_margin_none"
                    android:layout_weight="0.5"
                    android:text="@string/email_sent_message"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
